Update AI Lab#3 BCS23009.ipynb

--- a/AI Lab#3 BCS23009.ipynb
+++ b/AI Lab#3 BCS23009.ipynb
@@ -521,7 +521,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter a line (blank line to stop):  I am Qasim\n",
+      "Enter a line (blank line to stop):  I am Musa\n",
       "Enter a line (blank line to stop):  learning python\n",
       "Enter a line (blank line to stop):  \n"
      ]
@@ -531,7 +531,7 @@
      "output_type": "stream",
      "text": [
       "OUTPUT: \n",
-      "i am qasim\n",
+      "i am musa\n",
       "learning python\n"
      ]
     }
